name: Origami
version: 1.0
cabal-version: >= 1.12
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/Origami/issues/new
category: Toys
synopsis: Origami paper-folding simulator
description:

Source-Repository head
  type: git
  location: git@github.com:IreneKnapp/Origami.git

Executable origami
  main-is: Main.hs
  other-modules:
  build-depends: base >= 4.1 && < 5
  default-language: Haskell2010
